css/main.css
html {
  background-color: #f2f1ed;
  font-family: "Open Sans", sans-serif;
}

.max-width {
  max-width: 1200px;
  margin: 0 auto;
}

#about > .grid,
#content > .grid {
  margin-bottom: 2.5em;
}

.red {
  color: #e1533c;
}

.black {
  color: #000;
}

.wordmark {
  text-align: center;
  margin: 0 auto;
}

.wordmark img {
  max-width: 200px;
  min-width: 150px;
  width: 70%;
}

footer {
  background-color: #942a19;
  color: #fff;
}

footer a {
  color: #fff;
}

header nav {
  text-align: center;
  font-family: Sintony, sans-serif;
}

header nav li {
  margin-bottom: 1.75em;
  display: block;
  width: 100%;
}

header nav li a {
  color: #204a94;
  margin-right: 0;
  text-decoration: none;
  transition-timing-function: ease;
}

header nav li a:hover {
  border-bottom: 3px solid #e1533c;
  transition: .25s;
  background-color: #f2f1ed;
}

/* BANNER */

.banner-container {
  width: 100%;
  padding: 160px 0;
  margin-bottom: .5em;
  background-position: center center;
  background-repeat: no-repeat;
  position: relative;
  background-size: cover;
}

.banner-container::before {
  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top left, rgba(19, 47, 86, .8) 0%, rgba(36, 87, 160, .3) 100%) repeat;
  content: "";
  position: absolute;
  display: block;
  height: 100%;
  left: 0;
  top: 0;
  width: 100%;
}

.banner-home {
  background-image: url("../images/cat-lady.jpg");
}

.banner-animals {
  background-image: url("../images/dog-blanket.jpg");
}

.banner-rescue {
  background-image: url("../images/goat-eating.jpg");
}

.banner-wrapper h1 {
  margin-top: .5em;
  color: #fff;
  font-family: Sintony, sans-serif;
  text-shadow: 0 0 8px #000;
}

.banner-wrapper p {
  margin-top: 3.5em;
  color: #fff;
  text-shadow: 0 0 8px #000;
  max-width: 38em;
}

.main-ol p {
  color: #000;
}

.pet img {
  object-fit: cover;
  width: 270px;
  height: 270px;
}

.connect {
  border-left: none;
  border-top: 1px solid #fff;
  padding-left: 0;
  padding-top: 1.2em;
  height: 8em;
}

.btn {
  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top, rgba(225, 83, 60, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
  border: none;
  color: #fff;
}

.btn:hover {
  background: none;
  background-color: #942a19;
  color: #fff;
}

.icons-container img {
  margin: 0 auto;
  border: 6px solid #942a19;
  border-radius: 50%;
  padding: .25em;
  min-width: 150px;
  width: 50%;
}

.icons-container {
  padding-bottom: 4em;
}

fieldset {
  border: 0;
}

form {
  background-color: #fff;
}

form input,
form select {
  border: 2px solid #ccc;
  border-radius: 8px;
}

@media only screen and (min-width: 60em) {

  header nav {
    text-align: left;
  }

  #about > .grid,
  #content > .grid {
    margin-bottom: 3.5em;
  }

  .banner-container {
    padding: 300px 0;
  }

  .banner-container h1 {
    margin: 0;
  }

  .banner-container p {
    margin-top: 2.5em;
  }

  .banner-container p,
  .banner-container h1 {
    padding-left: 90px;
  }

}

@media only screen and (min-width: 38em) {

  .connect {
    border-top: none;
    border-left: 1px solid #fff;
    height: 11em;
    padding-left: 5%;
    padding-top: 0;
  }

  .banner-container {
    margin-bottom: 1em;
  }

}

@media only screen and (min-width: 25em) {

  header nav ul li {
    display: inline;
    padding: 0 1em;
  }

}

